--- a/zzlibrary/build.gradle
+++ b/zzlibrary/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     compile 'com.jakewharton.rxbinding2:rxbinding-support-v4:2.0.0'
     compile 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.0.0'
     compile 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:2.0.0'
+    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.3@aar'
 
     compile 'com.google.code.gson:gson:2.7'
 
