--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.xxy.bx">
 
     <application
-        android:name="com.box.lib.app.LibApp"
+        android:name="com.box.lib.app.MainApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name_bx"
