--- a/mapmodule/src/main/debug/AndroidManifest.xml
+++ b/mapmodule/src/main/debug/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:resizeable="true" />
 
     <application
-        android:name="com.box.lib.app.LibApp"
+        android:name="com.box.lib.app.MainApp"
         android:allowBackup="true"
         android:label="@string/map_app_name"
         android:supportsRtl="true"
